# convert-pheno-ui

./: .gitignore  .prettierignore  .sonar.env  404.html  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  env.example  example.env  get_public_kc_key.sh  index.html  makefile  mkdocs.yml  requirements.txt  sonar-project.properties  sonar.sh  used_docker_imgs.txt
.devcontainer/: devcontainer.json
.github/: bioconda-build-perl-convert-pheno.yml
about/: index.html
bff/: index.html
cdisc-odm/: index.html
citation/: index.html
conda_recipe/: bioconda_utils-requirements.txt  build.sh  build_locally.md  config.yml  environment.yaml  meta.yaml
convertPheno_server/: .gitignore  .pre-commit-config.yaml  .snyk  Dockerfile  README.md  bandit.yaml  docker-compose.yml  emptyAllTables.py  entrypoint.sh  example.dev.env  example.env  get_public_kc_key.sh  makefile  pyproject.toml  pyproject.yaml  realm-export.json  requirements-mini.txt  requirements.txt  server.sh  sonar-project.properties  sonar.sh
convertPheno_server/data/: README.md
convertPheno_server/server/: app.py  main.py  model.py  security.py
convertPheno_server/server/apis/: captcha.py  clinical.py  jobs.py  submission.py  test.py
convertPheno_server/server/config/: config.py  config_test.py  general_config.py  gunicorn_conf.py
convertPheno_server/server/data/: README
convertPheno_server/server/data/example_in/: redcap_dictionary.csv  redcap_mapping.yaml
convertPheno_server/server/utils/: convert_pheno.py  db_helpers.py  error_handler.py  jsonschema_helpers.py
convertPheno_server/tests/: .coveragerc  conftest.py  test_auth.py  test_clinical.py  test_convert_endpoint.py  test_download.py  test_health.py  test_jobs.py  test_submission.py
convertPheno_server/tests/helpers/: utils.py
convertPheno_server/tests/reports/coverage/: coverage.xml
convertPheno_server/tests/unit_tests/: test_clinical.py
data/: README
(+282 files in other folders)
