[tool.poetry]
name = "convertpheno-server"
version = "0.1.0"
description = ""
authors = ["Ivo Leist"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10.6"
anytree = "^2.12.1"
cryptography = "^41.0.7"
docker = "^6.1.3"
flask-restx = "^1.2.0"
flask = "2.2.5"
flask-cors = "^4.0.0"
flask-sqlalchemy = "^3.1.1"
Flask-Limiter = "^3.5.0"
genson = "^1.2.2"
jsonschema = "^4.17.3"
psycopg2-binary = "^2.9.9"
pyjwt = "^2.8.0"
requests = "^2.31.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
python-dotenv = "^1.0.0"
pytest-mock = "^3.12.0"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
flake8 = "^6.1.0"
flake8-html = "^0.4.3"
pylint = "^3.0.2"
ruff = "^0.1.7"

[tool.poetry.group.prod.dependencies]
gunicorn = "^21.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
